# TestTask

./: .gitignore  pyproject.toml
task/: task.sqlite3
task/task/: settings.py  urls.py
task/testtask/: urls.py  views.py
task/testtask/migrations/: 0001_initial.py
