

[tool.poetry]
name = "TestTaskPython"
version = "0.1.0"
description = ""
authors = ["Anton_deltaTime <space.volk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.4"
asgiref = "3.3.1"
sqlparse = "0.4.1"
pytz = "2020.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
